syntax = "proto3";
package pt.ulisboa.tecnico.nameserver.contract;

message RegisterRequest {
    string name = 1;
    string qualifier = 2;
    string address = 3;
}

message RegisterResponse {
    // No args
}

message LookupRequest {
    string name = 1;
    string qualifier = 2;
}

message LookupResponse {
  repeated string servers = 1;
}

message DeleteRequest {
    string name = 1;
    string address = 2;   
}

message DeleteResponse {
    // No Args
}

service NameServerService {
    rpc register(RegisterRequest) returns (RegisterResponse);
    rpc lookup(LookupRequest) returns (LookupResponse);
    rpc delete(DeleteRequest) returns (DeleteResponse);
}